--- a/sellers.ipynb
+++ b/sellers.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -102,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "challengify"
@@ -110,7 +119,148 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from olist.data import Olist\n",
+    "from olist.order import Order\n",
+    "\n",
+    "\n",
+    "class Seller:\n",
+    "    def __init__(self):\n",
+    "        # Import data only once\n",
+    "        olist = Olist()\n",
+    "        self.data = olist.get_data()\n",
+    "        self.order = Order()\n",
+    "\n",
+    "    def get_seller_features(self):\n",
+    "        \"\"\"\n",
+    "        Returns a DataFrame with:\n",
+    "        'seller_id', 'seller_city', 'seller_state'\n",
+    "        \"\"\"\n",
+    "        sellers = self.data['sellers'].copy(\n",
+    "        )  # Make a copy before using inplace=True so as to avoid modifying self.data\n",
+    "        sellers.drop('seller_zip_code_prefix', axis=1, inplace=True)\n",
+    "        sellers.drop_duplicates(\n",
+    "            inplace=True)  # There can be multiple rows per seller\n",
+    "        return sellers\n",
+    "\n",
+    "    def get_seller_delay_wait_time(self):\n",
+    "        \"\"\"\n",
+    "        Returns a DataFrame with:\n",
+    "        'seller_id', 'delay_to_carrier', 'wait_time'\n",
+    "        \"\"\"\n",
+    "        # Get data\n",
+    "        order_items = self.data['order_items'].copy()\n",
+    "        orders = self.data['orders'].query(\"order_status=='delivered'\").copy()\n",
+    "\n",
+    "        ship = order_items.merge(orders, on='order_id')\n",
+    "\n",
+    "        # Handle datetime\n",
+    "        ship.loc[:, 'shipping_limit_date'] = pd.to_datetime(\n",
+    "            ship['shipping_limit_date'])\n",
+    "        ship.loc[:, 'order_delivered_carrier_date'] = pd.to_datetime(\n",
+    "            ship['order_delivered_carrier_date'])\n",
+    "        ship.loc[:, 'order_delivered_customer_date'] = pd.to_datetime(\n",
+    "            ship['order_delivered_customer_date'])\n",
+    "        ship.loc[:, 'order_purchase_timestamp'] = pd.to_datetime(\n",
+    "            ship['order_purchase_timestamp'])\n",
+    "\n",
+    "        # Compute delay and wait_time\n",
+    "        def delay_to_logistic_partner(d):\n",
+    "            days = np.mean(\n",
+    "                (d.order_delivered_carrier_date - d.shipping_limit_date) /\n",
+    "                np.timedelta64(24, 'h'))\n",
+    "            if days > 0:\n",
+    "                return days\n",
+    "            else:\n",
+    "                return 0\n",
+    "\n",
+    "        def order_wait_time(d):\n",
+    "            days = np.mean(\n",
+    "                (d.order_delivered_customer_date - d.order_purchase_timestamp)\n",
+    "                / np.timedelta64(24, 'h'))\n",
+    "            return days\n",
+    "\n",
+    "        delay = ship.groupby('seller_id')\\\n",
+    "                    .apply(delay_to_logistic_partner)\\\n",
+    "                    .reset_index()\n",
+    "        delay.columns = ['seller_id', 'delay_to_carrier']\n",
+    "\n",
+    "        wait = ship.groupby('seller_id')\\\n",
+    "                   .apply(order_wait_time)\\\n",
+    "                   .reset_index()\n",
+    "        wait.columns = ['seller_id', 'wait_time']\n",
+    "\n",
+    "        df = delay.merge(wait, on='seller_id')\n",
+    "\n",
+    "        return df\n",
+    "\n",
+    "    def get_active_dates(self):\n",
+    "        \"\"\"\n",
+    "        Returns a DataFrame with:\n",
+    "        'seller_id', 'date_first_sale', 'date_last_sale', 'months_on_olist'\n",
+    "        \"\"\"\n",
+    "        # First, get only orders that are approved\n",
+    "        orders_approved = self.data['orders'][[\n",
+    "            'order_id', 'order_approved_at'\n",
+    "        ]].dropna()\n",
+    "\n",
+    "        # Then, create a (orders <> sellers) join table because a seller can appear multiple times in the same order\n",
+    "        orders_sellers = orders_approved.merge(self.data['order_items'],\n",
+    "                                               on='order_id')[[\n",
+    "                                                   'order_id', 'seller_id',\n",
+    "                                                   'order_approved_at'\n",
+    "                                               ]].drop_duplicates()\n",
+    "        orders_sellers[\"order_approved_at\"] = pd.to_datetime(\n",
+    "            orders_sellers[\"order_approved_at\"])\n",
+    "\n",
+    "        # Compute dates\n",
+    "        orders_sellers[\"date_first_sale\"] = orders_sellers[\"order_approved_at\"]\n",
+    "        orders_sellers[\"date_last_sale\"] = orders_sellers[\"order_approved_at\"]\n",
+    "        df = orders_sellers.groupby('seller_id').agg({\n",
+    "            \"date_first_sale\": min,\n",
+    "            \"date_last_sale\": max\n",
+    "        })\n",
+    "        df['months_on_olist'] = round(\n",
+    "            (df['date_last_sale'] - df['date_first_sale']) /\n",
+    "            np.timedelta64(1, 'M'))\n",
+    "        return df\n",
+    "\n",
+    "    def get_quantity(self):\n",
+    "        \"\"\"\n",
+    "        Returns a DataFrame with:\n",
+    "        'seller_id', 'n_orders', 'quantity', 'quantity_per_order'\n",
+    "        \"\"\"\n",
+    "        order_items = self.data['order_items']\n",
+    "\n",
+    "        n_orders = order_items.groupby('seller_id')['order_id']\\\n",
+    "            .nunique()\\\n",
+    "            .reset_index()\n",
+    "        n_orders.columns = ['seller_id', 'n_orders']\n",
+    "\n",
+    "        quantity = order_items.groupby('seller_id', as_index=False).agg(\n",
+    "            {'order_id': 'count'})\n",
+    "        quantity.columns = ['seller_id', 'quantity']\n",
+    "\n",
+    "        result = n_orders.merge(quantity, on='seller_id')\n",
+    "        result['quantity_per_order'] = result['quantity'] / result['n_orders']\n",
+    "        return result\n",
+    "\n",
+    "    def get_sales(self):\n",
+    "        \"\"\"\n",
+    "        Returns a DataFrame with:\n",
+    "        'seller_id', 'sales'\n",
+    "        \"\"\"\n",
+    "        return self.data['order_items'][['seller_id', 'price']]\\\n",
+    "            .groupby('seller_id')\\\n",
+    "            .sum()\\\n",
+    "            .rename(columns={'price': 'sales'})\n",
+    "\n",
+    "    def get_review_score(self):\n",
+    "        \"\"\"\n",
+    "        Returns a DataFrame with:\n",
+    "        'seller_id', 'share_of_five_stars', 'share_of_one_stars', 'review_score'\n",
+    "        \"\"\""
    ]
   },
   {
@@ -130,11 +280,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (4086461225.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn [7], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    orders_sellers = self.data['order_items'][['order_id', 'seller_id']].drop_duplicates()\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    " orders_reviews = self.order.get_review_score()\n",
+    "        orders_sellers = self.data['order_items'][['order_id', 'seller_id']].drop_duplicates()\n",
+    "\n",
+    "        df = orders_sellers.merge(orders_reviews, on='order_id')\n",
+    "        res = df.groupby('seller_id', as_index=False).agg({\n",
+    "            'dim_is_one_star':\n",
+    "            'mean',\n",
+    "            'dim_is_five_star':\n",
+    "            'mean',\n",
+    "            'review_score':\n",
+    "            'mean'\n",
+    "        })\n",
+    "        # Rename columns\n",
+    "        res.columns = [\n",
+    "            'seller_id', 'share_of_one_stars', 'share_of_five_stars',\n",
+    "            'review_score'\n",
+    "        ]\n",
+    "\n",
+    "        return res"
    ]
   },
   {
@@ -146,9 +323,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Seller' object has no attribute 'get_training_data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [8], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnbresult\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ChallengeResult\n\u001b[0;32m----> 3\u001b[0m tmp \u001b[38;5;241m=\u001b[39m \u001b[43mSeller\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_training_data\u001b[49m()\n\u001b[1;32m      4\u001b[0m result \u001b[38;5;241m=\u001b[39m ChallengeResult(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mseller\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m      5\u001b[0m     shape \u001b[38;5;241m=\u001b[39m tmp\u001b[38;5;241m.\u001b[39mshape,\n\u001b[1;32m      6\u001b[0m     median \u001b[38;5;241m=\u001b[39m tmp\u001b[38;5;241m.\u001b[39mreview_score\u001b[38;5;241m.\u001b[39mmedian()\n\u001b[1;32m      7\u001b[0m )\n\u001b[1;32m      8\u001b[0m result\u001b[38;5;241m.\u001b[39mwrite()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Seller' object has no attribute 'get_training_data'"
+     ]
+    }
+   ],
    "source": [
     "from nbresult import ChallengeResult\n",
     "\n",
@@ -481,9 +670,34 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
